--- a/hs_model_program/templates/pages/modelprogramresource.html
+++ b/hs_model_program/templates/pages/modelprogramresource.html
@@ -11,20 +11,42 @@
                 {# Add the view mode html code below #}
                 <div>
                     {% if mpmetadata %}
-                        <hr>
-
-
                         {########################}
                         {#       DATA FILES     #}
                         {########################}
-                        <div class="row" id="mp">
-                            <div class="col-sm-4">
-                                <p class="mpElement"> Computational Engine </p>
-                            </div>
-
-                            <div class="col-sm-8">
-                                <table>
-                                    {% for name, path in mpmetadata.get_engine_list.items %}
+                        <legend>Data files</legend>
+                        <table class="custom-table">
+                            <tbody>
+                                <tr><th class="text-muted">Computational Engine </th>
+                                    <td>
+                                        {% for name, path in mpmetadata.get_engine_list.items %}
+                                            <a id="permalink"
+                                               href="http://{{ request.get_host }}/resource/{{ path }}"
+                                               target="_blank">{{ name }}</a>
+                                        {% endfor %}
+                                    </td>
+                                </tr>
+                                <tr><th class="text-muted">Software </th>
+                                    <td>
+                                        {% for name, path in mpmetadata.get_software_list.items %}
+                                            <a id="permalink"
+                                               href="http://{{ request.get_host }}/resource/{{ path }}"
+                                               target="_blank">{{ name }}</a>
+                                        {% endfor %}
+                                    </td>
+                                </tr>
+                                <tr><th class="text-muted">Documentation </th>
+                                    <td>
+                                        {% for name, path in mpmetadata.get_documentation_list.items %}
+                                            <a id="permalink"
+                                               href="http://{{ request.get_host }}/resource/{{ path }}"
+                                               target="_blank">{{ name }}</a>
+                                    {% endfor %}
+                                    </td>
+                                </tr>
+                                <tr><th class="text-muted">Release Notes </th>
+                                    <td>
+                                        {% for name, path in mpmetadata.get_releasenotes_list.items %}
                                         <tr>
                                             <td>
                                                 <a id="permalink"
@@ -32,134 +54,44 @@
                                                    target="_blank">{{ name }}</a>
                                             </td>
                                         </tr>
-                                    {% endfor %}
-                                </table>
-                            </div>
-                        </div>
-
-                        <div class="row" id="mp">
-                            <div class="col-sm-4">
-                                <p class="mpElement"> Software </p>
-                            </div>
-
-                            <div class="col-sm-8">
-                                <table>
-                                    {% for name, path in mpmetadata.get_software_list.items %}
-                                        <tr>
-                                            <td>
-                                                <a id="permalink"
-                                                   href="http://{{ request.get_host }}/resource/{{ path }}"
-                                                   target="_blank">{{ name }}</a>
-                                            </td>
-                                        </tr>
-                                    {% endfor %}
-                                </table>
-                            </div>
-                        </div>
-
-
-                        <div class="row" id="mp">
-                            <div class="col-sm-4">
-                                <p class="mpElement">Documentation:</p>
-                            </div>
-                            <div class="col-sm-8">
-                            <table>
-                                    {% for name, path in mpmetadata.get_documentation_list.items %}
-                                        <tr>
-                                            <td>
-                                                <a id="permalink"
-                                                   href="http://{{ request.get_host }}/resource/{{ path }}"
-                                                   target="_blank">{{ name }}</a>
-                                            </td>
-                                        </tr>
-                                    {% endfor %}
-                            </table>
-                            </div>
-                        </div>
-
-
-                        <div class="row" id="mp">
-                            <div class="col-sm-4">
-                                <p class="mpElement">Release Notes:</p>
-                            </div>
-                            <div class="col-sm-8">
-                                <table>
-                                    {% for name, path in mpmetadata.get_releasenotes_list.items %}
-                                        <tr>
-                                            <td>
-                                                <a id="permalink"
-                                                   href="http://{{ request.get_host }}/resource/{{ path }}"
-                                                   target="_blank">{{ name }}</a>
-                                            </td>
-                                        </tr>
-                                    {% endfor %}
-                                </table>
-                            </div>
-                        </div>
-
-                        <hr>
-
-
+                                        {% endfor %}
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <hr style="border:0">
 
                         {########################}
                         {#   MODEL  METADATA  #}
                         {########################}
-                        <div class="row" id="mp">
-                            <div class="col-sm-4">
-                                <p class="mpElement">Release Date:</p>
-                            </div>
-                                <div class="col-sm-8">{{ mpmetadata.modelReleaseDate |date:"SHORT_DATE_FORMAT" }}</div>
-                        </div>
-
-
-
-                        <div class="row" id="mp">
-                            <div class="col-sm-4">
-                                <p class="mpElement">Website:</p>
-                            </div>
-                            <div class="col-sm-8"><a href="{{ mpmetadata.modelWebsite }}" target="_blank">{{ mpmetadata.modelWebsite }}</a></div>
-                        </div>
-                        <hr>
+                        <legend>Model</legend>
+                        <table class="custom-table">
+                            <tbody>
+                                <tr>
+                                    <th class="text-muted">Release Date </th>
+                                    <td>{{ mpmetadata.modelReleaseDate |date:"SHORT_DATE_FORMAT" }}</td>
+                                </tr>
+                                <tr>
+                                    <th class="text-muted">Website </th>
+                                    <td><a href="{{ mpmetadata.modelWebsite }}" target="_blank">{{ mpmetadata.modelWebsite }}</a></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <hr style="border:0">
 
                         {########################}
                         {#  SOFTWARE  METADATA  #}
                         {########################}
-
-                        <div class="row" id="mp">
-                            <div class="col-sm-4">
-                                <p class="mpElement">Version:</p>
-                            </div>
-                            <div class="col-sm-8">{{ mpmetadata.modelVersion }}</div>
-                        </div>
-
-
-
-                        <div class="row" id="mp">
-                            <div class="col-sm-4">
-                                <p class="mpElement">Language:</p>
-                            </div>
-                            <div class="col-sm-8">{{ mpmetadata.modelProgramLanguage }}</div>
-                        </div>
-
-
-
-                        <div class="row" id="mp">
-                            <div class="col-sm-4">
-                                <p class="mpElement" >Software Repository:</p>
-                            </div>
-                            <div class="col-sm-8"><a target="_blank" href="{{ mpmetadata.modelCodeRepository }}">{{ mpmetadata.modelCodeRepository }}</a></div>
-                        </div>
-
-
-
-                        <div class="row" id="mp">
-                            <div class="col-sm-4">
-                                <p class="mpElement">Operating System:</p>
-                            </div>
-                            <div class="col-sm-8">{{ mpmetadata.modelOperatingSystem }}</div>
-                        </div>
-
-                        <hr>
+                        <legend>Software</legend>
+                        <table class="custom-table">
+                            <tbody>
+                                <tr><th class="text-muted">Version </th><td>{{ mpmetadata.modelVersion }}</td></tr>
+                                <tr><th class="text-muted">Language </th><td>{{ mpmetadata.modelProgramLanguage }}</td></tr>
+                                <tr><th class="text-muted">Software Repository </th><td><a target="_blank" href="{{ mpmetadata.modelCodeRepository }}">{{ mpmetadata.modelCodeRepository }}</a></td></tr>
+                                <tr><th class="text-muted">Operating System </th><td>{{ mpmetadata.modelOperatingSystem }}</td></tr>
+                            </tbody>
+                        </table>
+                        <hr style="border:0">
 
                     {% endif %}
                 </div>
