--- a/hs_model_program/templates/pages/modelprogramresource.html
+++ b/hs_model_program/templates/pages/modelprogramresource.html
@@ -16,54 +16,60 @@
                     <legend>Data files</legend>
                     <table class="custom-table">
                         <tbody>
-                            <tr><th class="text-muted">Computational Engine </th>
-                                <td>
-                                    {% if mpmetadata.get_engine_list.items|length > 0 %}
-                                    {% for name, path in mpmetadata.get_engine_list.items %}
-                                        <a id="permalink"
-                                           href="http://{{ request.get_host }}/resource/{{ path }}"
-                                           target="_blank">{{ name }}</a>
-                                    {% endfor %}
+                            {% for name, path in mpmetadata.get_engine_list.items %}
+                                <tr>
+                                    {% if forloop.counter0 > 0 %}
+                                        <th></th>
                                     {% else %}
-                                    <i>Unspecified</i>
+                                        <th class="text-muted">Computational Engine</th>
                                     {% endif %}
-                                </td>
-                            </tr>
-                            <tr><th class="text-muted">Software </th>
-                                <td>
-                                    {% if mpmetadata.get_software_list.items|length > 0 %}
-                                    {% for name, path in mpmetadata.get_software_list.items %}
-                                        <a id="permalink"
+                                    <td><a id="permalink"
                                            href="http://{{ request.get_host }}/resource/{{ path }}"
-                                           target="_blank">{{ name }}</a>
-                                    {% endfor %}
+                                           target="_blank">{{ name }}</a></td>
+                                </tr>
+                            {% endfor %}
+
+                            {% for name, path in mpmetadata.get_software_list.items %}
+                                <tr>
+                                    {% if forloop.counter0 > 0 %}
+                                        <th></th>
                                     {% else %}
-                                    <i>Unspecified</i>
+                                        <th class="text-muted">Software</th>
                                     {% endif %}
-                                </td>
-                            </tr>
-                            <tr><th class="text-muted">Documentation </th>
-                                <td>
-                                    {% for name, path in mpmetadata.get_documentation_list.items %}
+                                    <td><a id="permalink"
+                                           href="http://{{ request.get_host }}/resource/{{ path }}"
+                                           target="_blank">{{ name }}</a></td>
+                                </tr>
+                            {% endfor %}
+
+                            {% for name, path in mpmetadata.get_documentation_list.items %}
+                                <tr>
+                                    {% if forloop.counter0 > 0 %}
+                                        <th></th>
+                                    {% else %}
+                                        <th class="text-muted">Documentation</th>
+                                    {% endif %}
+                                    <td><a id="permalink"
+                                           href="http://{{ request.get_host }}/resource/{{ path }}"
+                                           target="_blank">{{ name }}</a></td>
+                                </tr>
+                            {% endfor %}
+
+
+                            {% for name, path in mpmetadata.get_releasenotes_list.items %}
+                                <tr>
+                                    {% if forloop.counter0 > 0 %}
+                                        <th></th>
+                                    {% else %}
+                                        <th class="text-muted">Release Notes</th>
+                                    {% endif %}
+                                    <td>
                                         <a id="permalink"
                                            href="http://{{ request.get_host }}/resource/{{ path }}"
                                            target="_blank">{{ name }}</a>
-                                {% endfor %}
-                                </td>
-                            </tr>
-                            <tr><th class="text-muted">Release Notes </th>
-                                <td>
-                                    {% for name, path in mpmetadata.get_releasenotes_list.items %}
-                                    <tr>
-                                        <td>
-                                            <a id="permalink"
-                                               href="http://{{ request.get_host }}/resource/{{ path }}"
-                                               target="_blank">{{ name }}</a>
-                                        </td>
-                                    </tr>
-                                    {% endfor %}
-                                </td>
-                            </tr>
+                                    </td>
+                                </tr>
+                            {% endfor %}
                         </tbody>
                     </table>
                     <hr style="border:0">
