Model formatting changes in geographic feature resources.

--- a/hs_geographic_feature_resource/templates/pages/geographicfeatureresource.html
+++ b/hs_geographic_feature_resource/templates/pages/geographicfeatureresource.html
@@ -33,7 +33,7 @@
                             </table>
 
                         {% else %}
-                            <p>Geometry information is not provided.</p>
+                            <p><i>Geometry information is not provided.</i></p>
                         {% endif %}
                     </div>
 
@@ -74,7 +74,7 @@
                             </table>
 
                         {% else %}
-                            <p>Metadata information is not provided.</p>
+                            <p><i>Metadata information is not provided.</i></p>
                         {% endif %}
                     </div>
 
@@ -99,7 +99,7 @@
                                 {% endfor %}
                             </table>
                         {% else %}
-                            <p> Metadata information is not provided.</p>
+                            <p><i>Metadata information is not provided.</i></p>
                         {% endif %} {# variable section end #}
                     </div>
 
