--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -77,7 +77,7 @@
             </tr>
             <tr>
                 <td>
-                    If you want to load a resource from an iRODS server into HydroShare, please do so by logging into your iRODS server
+                    If you want to load files from an iRODS server into HydroShare, please do so by logging into your iRODS server
                     <a id="btn-signin-irods" type="button" class="btn-link" data-toggle="modal" data-target="#irodsSignin">here</a>
                     <span id="sign-in-info"></span>
                     <br>
