further corrected wording

--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -77,8 +77,8 @@
             </tr>
             <tr>
                 <td>
-                    If you want to load files from an iRODS server into HydroShare, please do so by logging into your iRODS server
-                    <a id="btn-signin-irods" type="button" class="btn-link" data-toggle="modal" data-target="#irodsSignin">here</a>
+                    If you want to load files from an iRODS server into HydroShare, please do so by logging into the iRODS server
+                    <a id="btn-signin-irods" type="button" class="btn-link" data-toggle="modal" data-target="#irodsSignin">here.</a>
                     <span id="sign-in-info"></span>
                     <br>
                     <input type="hidden" id="irods-username" name="irods-username" value="">
