--- a/hs_app_netCDF/templates/pages/netcdfresource.html
+++ b/hs_app_netCDF/templates/pages/netcdfresource.html
@@ -180,15 +180,26 @@
 
 
     {# Add netcdf opendap button  #}
-    {% if opendap_link %}
-        <td><a style="margin-left:15px" id="btn-netcdf-opendap" type="button" class="btn btn-success" href='{{opendap_link }}'
-               title="When changing this resource's sharing status, please allow 2 minutes for the OPeNDAP service to refresh on this page" >
-            <span class="button-label"> OPeNDAP Service</span>
-        </a></td>
+{#    {% if thredds_service %}#}
+{#        <td><a style="margin-left:15px" id="btn-netcdf-opendap" type="button" target='_blank'class="btn btn-success" href='{{thredds_service}}'#}
+{#               title="When changing this resource's sharing status, please allow 2 minutes for the THREDDS data service to refresh on this page" >#}
+{#            <span class="button-label"> THREDDS Data Services </span>#}
+{#        </a></td>#}
+{#    {% endif %}#}
+
+    {# Add THREDDS service #}
+    {% if nc_file_name %}
+        <div id="#thredds">
+            <h3>THREDDS Data Service</h3>
+            <h4>OPeNDAP: <a href={{ opendap }}> {{ nc_file_name }}</a></h4>
+            <h4>NetCDF Subset: <a href={{ ncss }}> {{ nc_file_name }}</a></h4>
+            <h4>NCML: <a href={{ ncml }}> {{ nc_file_name }}</a></h4>
+            <h4>ISO Metadata: <a href={{ iso }}> {{ nc_file_name }}</a></h4>
+            <h4>Visualize using IDV:Requires IDV <a href="https://www.unidata.ucar.edu/software/idv/" target="_blank">installation</a>, then use OPeNDAP service link as "URL" for IDV "Data Choosers"</h4>
+        </div>
     {% endif %}
 
 {% endblock %} {# extra block ends here #}
-
 
 
 {% block extra_js %}
@@ -226,12 +237,12 @@
 {#        }#}
 {#    })#}
 
-    // netcdf opendap button
-    $(document).ready(function(){
-        if ($('#btn-netcdf-opendap').length > 0){
-           $("#btn-netcdf-opendap").insertAfter("#btn-download-all");
-        }
-    })
+{#    // netcdf opendap button#}
+{#    $(document).ready(function(){#}
+{#        if ($('#btn-netcdf-opendap').length > 0){#}
+{#           $("#btn-netcdf-opendap").insertAfter("#btn-download-all");#}
+{#        }#}
+{#    })#}
 
 
 </script>
