--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -21,52 +21,87 @@
             </ul>
         </div>
         <div class="col-lg-10" id="items">
-            <h2 class="page-title">Resources</h2>
-            <div class=resource-search>
-                <input class=resource-search-entry placeholder="Search..."></input>
-                <ul class=resource-search-items></ul>
-                <ul class=resource-search-options></ul>
+            <h2 class="page-title">My Resources</h2>
+{#            <div class=resource-search>#}
+{#                <input class=resource-search-entry placeholder="Search..."></input>#}
+{#                <ul class=resource-search-items></ul>#}
+{#                <ul class=resource-search-options></ul>#}
+{#            </div>#}
+            <div class="row">
+                <div class="col-sm-8 col-xs-12">
+                    <div class="input-group" id="adv-search">
+                        <span class="glyphicon glyphicon-search search-icon"></span>
+                        <input id="resource-search-input" type="text" class="form-control" placeholder="Search"/>
+
+                        <div class="input-group-btn">
+                            <div class="btn-group" role="group">
+                                <div class="dropdown dropdown-lg">
+                                    <span class="btn-clear-search"><span id="btn-clear-search-input" class="glyphicon glyphicon-remove-sign"></span></span>
+
+                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
+                                            aria-expanded="false"><span class="caret"></span></button>
+
+                                    <div class="dropdown-menu dropdown-menu-left" role="menu">
+                                        <form class="form-horizontal" role="form">
+                                            <div class="form-group">
+                                                <label for="filter">Resource Type</label>
+                                                <select id="input-resource-type" class="form-control pull-left">
+                                                    <option value="" selected>All</option>
+                                                    <option value="generic">Generic</option>
+                                                    <option value="geographic raster">Geographic Raster</option>
+                                                    <option value="model program">Model Program</option>
+                                                    <option value="model instance resource">Model Instance</option>
+                                                    <option value="swat model instance resource">Swat Model Instance</option>
+                                                    <option value="multidimensional">Multidimensional (NetCDF)</option>
+                                                    <option value="time series">Time Series</option>
+                                                    <option value="geographic feature">Geographic Feature (ESRI Shapefiles)</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="contain">Author</label>
+                                                <input id="input-author" class="form-control" type="text"/>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="contain">Subject</label>
+                                                <input id="input-subject" class="form-control" type="text"/>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                 </div>
             </div>
-            <table class="table table-striped table-hover" id="item-selectors">
+
+            <!-- /input-group -->
+            <table id="item-selectors">
+                <thead>
                 <tr>
-{#                    <th>Title <i class="fa fa-sort-desc"></i></th>#}
                     <th>Title</th>
-                    {# <th><i class="text-warning fa fa-star"></i></th> #}
                     <th>Type</th>
                     <th>First author</th>
                     <th>Last modified</th>
+                    <th>Subject</th>
                 </tr>
-
-                {# ################### #}
-                {% for res in resources %}
-                    <tr>
-                        <td><a href="{{ res.get_absolute_url }}">{{ res.metadata.title }}</a></td>
-                        {# <th><i class="text-warning fa {% if starred %}fa-star{% else %}fa-star-o{% endif %}"></i></th>  #}
-                        <td>{{ res|resource_type }}</td>
-                        {% if res.first_creator.description %}
-                            <td><a href="{{ res.first_creator.description }}">{{ res.first_creator.name  }}</a></td>
-                        {% else %}
-                            <td>{{ res.first_creator.name }}</td>
-                        {% endif %}
-
-                        <td>{{ res.updated|date }}, {{ res.updated|time }}</td>
-                    </tr>
-                {% endfor %}
-
+                </thead>
+                <tbody>
+                    {# ################### #}
+                    {% for res in resources %}
+                        <tr>
+                            <td><a href="{{ res.get_absolute_url }}">{{ res.metadata.title }}</a></td>
+                            <td>{{ res|resource_type }}</td>
+                            {% if res.first_creator.description %}
+                                <td><a href="{{ res.first_creator.description }}">{{ res.first_creator.name  }}</a></td>
+                            {% else %}
+                                <td>{{ res.first_creator.name }}</td>
+                            {% endif %}
+                            <td>{{ res.updated|date }}, {{ res.updated|time }}</td>
+                            <td>Subject {{ forloop.counter }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
             </table>
-
-            <div class="btn-toolbar">
-                <a class="btn btn-link" href="?start=0"><i class="fa fa-fast-backward"></i></a>
-                <a class="btn btn-link" href="?start={{ first|add:"-20" }}"><i class="fa fa-backward"></i></a>
-                {% if last %}
-                    Results {{ first|add:"1" }}-{{ last }} of {{ ct }}
-                {% else %}
-                    Results 0-0 of 0
-                {% endif %}
-                <a class="btn btn-link" href="?start={{ first|add:"20" }}"><i class="fa fa-forward"></i></a>
-                <a class="btn btn-link" href="?start={{ ct|add:"-20" }}"><i class="fa fa-fast-forward"></i></a>
-
-            </div>
         </div>
     </div>
 </div>
@@ -74,7 +109,179 @@
 {% endblock %}
 
 {% block extra_js %}
+    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css">
+    <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.10/js/jquery.dataTables.js"></script>
     <script type="text/javascript">
+        $(document).ready(function () {
+            var resourceTable = $("#item-selectors").DataTable({
+                "order": [[0, "desc"]],
+                "paging": false,
+                "info": false
+            });
+
+            $("#resource-search-input").keyup(function () {
+                var searchString = removeQueryOccurrences($(this).val());
+                applyQueryStrings();
+                resourceTable.search(searchString).draw();
+            });
+
+            $("#btn-clear-search-input").click(function () {
+                var searchInput = $("#resource-search-input");
+                searchInput.val("");
+                searchInput.keyup();
+            });
+
+            $('#input-author, #input-subject').keyup( function() {
+                typeQueryStrings();
+                resourceTable.draw();
+            } );
+
+            $("#input-resource-type").change(function(){
+                typeQueryStrings();
+                resourceTable.draw();
+            })
+        });
+
+        //strips query inputs from a search string
+        function removeQueryOccurrences(inputString) {
+            // Matches occurrences of query strings. i.e.: "[author:mauriel ramirez]", "[]", etc
+            var regExp = /\[([^\]|^\[]?)+\]/g;
+            var occurrences = inputString.match(regExp);
+
+            if (occurrences) {
+                // Remove query occurrences from input string
+                for (var i = 0; i < occurrences.length; i++) {
+                    inputString = inputString.replace(occurrences[i], "");
+                }
+            }
+
+            return inputString;
+        }
+
+        // Looks at the query strings in the searchbox and sets the values in the dropdown options
+        function applyQueryStrings() {
+            var inputString = $("#resource-search-input").val();
+            // Matches occurrences of query strings. i.e.: author:mauriel
+            var regExp = /\[(type|TYPE|author|AUTHOR|subject|SUBJECT):[^\]|^\[]+]/g;
+            var occurrences = inputString.match(regExp);
+
+            var inputType = "";
+            var inputSubject = "";
+            var inputAuthor = "";
+
+            var collection = [];
+            if (occurrences) {
+                for (var item in occurrences) {
+                    var content = occurrences[item].replace("[", "").replace("]", "").split(":");
+                    collection.push(content);
+                }
+            }
+
+            for (var item in collection) {
+                if (collection[item][0].toUpperCase() == "TYPE") {
+                    inputType = collection[item][1];
+                }
+                else if (collection[item][0].toUpperCase() == "AUTHOR") {
+                    inputAuthor = collection[item][1];
+                }
+                else if (collection[item][0].toUpperCase() == "SUBJECT") {
+                    inputSubject = collection[item][1];
+                }
+            }
+
+            $("#input-author").val(inputAuthor);
+            $("#input-subject").val(inputSubject);
+            $("#input-resource-type").val(inputType.toLowerCase());
+
+        }
+
+        // Looks at the values in the dropdown options and appends the corresponding query string to the search box.
+        function typeQueryStrings () {
+            var searchInput = $("#resource-search-input");
+
+            var type = $("#input-resource-type").val();
+            var author = $("#input-author").val();
+            var subject = $("#input-subject").val();
+
+            var searchQuery = "";
+
+            if (type) {
+                searchQuery = searchQuery + " [type:" + type + "]";
+            }
+
+            if (author) {
+                searchQuery = searchQuery + " [author:" + author + "]";
+            }
+
+            if (subject){
+                searchQuery = searchQuery + " [subject:" + subject + "]";
+            }
+
+            searchQuery = searchQuery + removeQueryOccurrences(searchInput.val());
+            searchQuery = searchQuery.trim();
+            searchInput.val(searchQuery);
+        }
+
+        {#        Table columns             #}
+        {#        0 - Title                 #}
+        {#        1 - Resource Type         #}
+        {#        2 - First Author          #}
+        {#        3 - Last Modified         #}
+        {#        4 - Subject               #}
+
+        /* Custom filtering function which will search data for the values in the custom filter dropdown */
+        $.fn.dataTable.ext.search.push (
+                function (settings, data, dataIndex) {
+                    var inputString = $("#resource-search-input").val();
+                    // Matches occurrences of query strings. i.e.: author:mauriel
+                    var regExp = /\[(type|author|subject|TYPE|AUTHOR|SUBJECT):[^\]|^\[]+]/g;
+                    var occurrences = inputString.match(regExp);
+
+                    var inputType = "";
+                    var inputSubject = "";
+                    var inputAuthor = "";
+
+                    // Split the occurrences at ':' and move to an array.
+                    var collection = [];
+                    if (occurrences) {
+                        for (var item in occurrences) {
+                            var content = occurrences[item].replace("[", "").replace("]", "").split(":");
+                            collection.push(content);
+                        }
+                    }
+
+                    // Extract the pieces of information
+                    for (var item in collection) {
+                        if (collection[item][0].toUpperCase() == "TYPE") {
+                            inputType = collection[item][1];
+                        }
+                        else if (collection[item][0].toUpperCase() == "AUTHOR") {
+                            inputAuthor = collection[item][1];
+                        }
+                        else if (collection[item][0].toUpperCase() == "SUBJECT") {
+                            inputSubject = collection[item][1];
+                        }
+                    }
+
+                    // Filter the table for each value
+
+                    if (inputType && data[1].toUpperCase().indexOf(inputType.toUpperCase()) == -1) {
+                        return false;
+                    }
+
+                    if (inputSubject && data[4].toUpperCase().indexOf(inputSubject.toUpperCase()) == -1) {
+                        return false;
+                    }
+
+                    if (inputAuthor && data[2].toUpperCase().indexOf(inputAuthor.toUpperCase()) == -1) {
+                        return false;
+                    }
+
+                    // Default
+                    return true;
+                }
+        );
+
         var k = 1;
         $(function() {
             $('[data-toggle="tooltip"]').tooltip({'placement': 'right'});
@@ -88,7 +295,7 @@
                 new_row.attr('id', 'dcterm' + k);
                 return false;
             })
-        })
+        });
 
         var urlParams;
         (window.onpopstate = function () {
@@ -339,4 +546,5 @@
             $('.resource-search').ResourceFilter();
         });
     </script>
+
 {% endblock %}
